--- a/tests/index.html
+++ b/tests/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="vendor/sinon-qunit-1.0.0.js"></script>
 
 	<!-- Load RequireJS & the testsuite -->
-    <script src="../lib/require.js" data-main="tests.js"></script>
+    <script src="../vendor/require.js" data-main="tests.js"></script>
 </head>
 <body>
 <div id="qunit"></div>
